# chorushub

./: .gitignore  README.md  chorushub-dbg.spec  chorushub.spec  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
data/mono/: config
scripts/: README.md  build--prepare-files.sh  build--set-env.sh  build-dlls.sh  build-pyinstaller.sh  run-advertiser.sh  run-hg-server.sh
snap/: snapcraft.yaml
src/chorushub/: advertiser.py  app.py  chorushuboptions.py  chorushubserver.py  chorushubserverinfo.py  hgserverunner.py
